// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallationSection should match a snapshot when SPECIFIC_OFFICE_GROUPS is selected 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.h2
        classname=""
      >
        Installation
      </mock-styled.h2>
      <mock-styled.p
        classname="mock-css. mock-css."
      >
        Please select the type of installation you require for this app:
      </mock-styled.p>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 0.75rem;
"
          >
            <mock-styled.input
              checked="false"
              id="WHOLE_ORG"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="WHOLE_ORG"
            >
              Install for the whole of your organisation
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.p
            classname=""
          >
            This will grant the app access to all data for all users and offices across your organisation
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 0.75rem;
"
          >
            <mock-styled.input
              checked="true"
              id="SPECIFIC_OFFICE_GROUPS"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="SPECIFIC_OFFICE_GROUPS"
            >
              Install for specific office groups
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.p
            classname=""
          >
            This will grant the app access to only data for the specific offices inside of each office group
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 1.25rem;
"
      >
        <mock-styled.div
          classname="mock-css."
        >
          <mock-styled.button
            classname="mock-css. mock-css.
  background-size: 100%;
  background-position-x: -0.5rem;
  padding-right: ,rem;

  &., {
    background-size: 100%;
    background-position-x: center;

    padding-left: ,rem;
    padding-right: ,rem;

    &::after {
      right: -1rem;
    }

    &::before {
      left: -1rem;
    }
  }

  , {
    padding-right: 1.25rem;
  }

  &::after {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    right: 0;
    background-image: url(',');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: right;
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }
 mock-css.
  min-width: 8rem;

  , {
    min-width: 6rem;
  }
"
            disabled="false"
          >
            Save
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.h2
      classname=""
    >
      Installation
    </mock-styled.h2>
    <mock-styled.p
      classname="mock-css. mock-css."
    >
      Please select the type of installation you require for this app:
    </mock-styled.p>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 0.75rem;
"
        >
          <mock-styled.input
            checked="false"
            id="WHOLE_ORG"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="WHOLE_ORG"
          >
            Install for the whole of your organisation
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.p
          classname=""
        >
          This will grant the app access to all data for all users and offices across your organisation
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 0.75rem;
"
        >
          <mock-styled.input
            checked="true"
            id="SPECIFIC_OFFICE_GROUPS"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="SPECIFIC_OFFICE_GROUPS"
          >
            Install for specific office groups
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.p
          classname=""
        >
          This will grant the app access to only data for the specific offices inside of each office group
        </mock-styled.p>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css.
  margin-bottom: 1.25rem;
"
    >
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.button
          classname="mock-css. mock-css.
  background-size: 100%;
  background-position-x: -0.5rem;
  padding-right: ,rem;

  &., {
    background-size: 100%;
    background-position-x: center;

    padding-left: ,rem;
    padding-right: ,rem;

    &::after {
      right: -1rem;
    }

    &::before {
      left: -1rem;
    }
  }

  , {
    padding-right: 1.25rem;
  }

  &::after {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    right: 0;
    background-image: url(',');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: right;
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }
 mock-css.
  min-width: 8rem;

  , {
    min-width: 6rem;
  }
"
          disabled="false"
        >
          Save
          <mock-styled.div />
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallationSection should match a snapshot when WHOLE_ORG is selected 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.h2
        classname=""
      >
        Installation
      </mock-styled.h2>
      <mock-styled.p
        classname="mock-css. mock-css."
      >
        Please select the type of installation you require for this app:
      </mock-styled.p>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 0.75rem;
"
          >
            <mock-styled.input
              checked="true"
              id="WHOLE_ORG"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="WHOLE_ORG"
            >
              Install for the whole of your organisation
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.p
            classname=""
          >
            This will grant the app access to all data for all users and offices across your organisation
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 0.75rem;
"
          >
            <mock-styled.input
              checked="false"
              id="SPECIFIC_OFFICE_GROUPS"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="SPECIFIC_OFFICE_GROUPS"
            >
              Install for specific office groups
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.p
            classname=""
          >
            This will grant the app access to only data for the specific offices inside of each office group
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 1.25rem;
"
      >
        <mock-styled.div
          classname="mock-css."
        >
          <mock-styled.button
            classname="mock-css. mock-css.
  background-size: 100%;
  background-position-x: -0.5rem;
  padding-right: ,rem;

  &., {
    background-size: 100%;
    background-position-x: center;

    padding-left: ,rem;
    padding-right: ,rem;

    &::after {
      right: -1rem;
    }

    &::before {
      left: -1rem;
    }
  }

  , {
    padding-right: 1.25rem;
  }

  &::after {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    right: 0;
    background-image: url(',');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: right;
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }
 mock-css.
  min-width: 8rem;

  , {
    min-width: 6rem;
  }
"
            disabled="true"
          >
            Save
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.h2
      classname=""
    >
      Installation
    </mock-styled.h2>
    <mock-styled.p
      classname="mock-css. mock-css."
    >
      Please select the type of installation you require for this app:
    </mock-styled.p>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 0.75rem;
"
        >
          <mock-styled.input
            checked="true"
            id="WHOLE_ORG"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="WHOLE_ORG"
          >
            Install for the whole of your organisation
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.p
          classname=""
        >
          This will grant the app access to all data for all users and offices across your organisation
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 0.75rem;
"
        >
          <mock-styled.input
            checked="false"
            id="SPECIFIC_OFFICE_GROUPS"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="SPECIFIC_OFFICE_GROUPS"
          >
            Install for specific office groups
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.p
          classname=""
        >
          This will grant the app access to only data for the specific offices inside of each office group
        </mock-styled.p>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css.
  margin-bottom: 1.25rem;
"
    >
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.button
          classname="mock-css. mock-css.
  background-size: 100%;
  background-position-x: -0.5rem;
  padding-right: ,rem;

  &., {
    background-size: 100%;
    background-position-x: center;

    padding-left: ,rem;
    padding-right: ,rem;

    &::after {
      right: -1rem;
    }

    &::before {
      left: -1rem;
    }
  }

  , {
    padding-right: 1.25rem;
  }

  &::after {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    right: 0;
    background-image: url(',');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: right;
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }

  &., {
    &::after {
      background-image: url(',');
    }
  }
 mock-css.
  min-width: 8rem;

  , {
    min-width: 6rem;
  }
"
          disabled="true"
        >
          Save
          <mock-styled.div />
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
